winter/data-structures/project/make.out
g++ -c -Wall driver.cpp -o driver.o
In file included from driver.cpp:1:
In file included from ./driver.h:7:
In file included from ./scheduler.h:5:
In file included from ./waitqueue.h:7:
./job.h:10:12: error: expected member name or ';' after declaration specifiers
                        j_id{id}, j_desc{desc}, n_procs{processors},
                                ^
./job.h:10:8: error: expected '('
                        j_id{id}, j_desc{desc}, n_procs{processors},
                            ^
./job.h:10:11: error: expected ';' after expression
                        j_id{id}, j_desc{desc}, n_procs{processors},
                               ^
                               ;
./job.h:10:9: warning: expression result unused [-Wunused-value]
                        j_id{id}, j_desc{desc}, n_procs{processors},
                             ^~
In file included from driver.cpp:1:
In file included from ./driver.h:7:
In file included from ./scheduler.h:5:
./waitqueue.h:24:16: error: no member named 'n_ticks' in 'Job'; did you mean 'j_ticks'?
                                        return a->n_ticks < b->n_ticks;
                                                  ^~~~~~~
                                                  j_ticks
./job.h:23:16: note: 'j_ticks' declared here
                uint32 j_id, j_ticks;
                             ^
In file included from driver.cpp:1:
In file included from ./driver.h:7:
In file included from ./scheduler.h:5:
./waitqueue.h:24:29: error: no member named 'n_ticks' in 'Job'; did you mean 'j_ticks'?
                                        return a->n_ticks < b->n_ticks;
                                                               ^~~~~~~
                                                               j_ticks
./job.h:23:16: note: 'j_ticks' declared here
                uint32 j_id, j_ticks;
                             ^
In file included from driver.cpp:1:
In file included from ./driver.h:7:
In file included from ./scheduler.h:6:
./runqueue.h:19:3: error: no template named 'vector'; did you mean 'std::vector'?
                vector<Job*> jobs;
                ^~~~~~
                std::vector
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:477:29: note: 'std::vector' declared here
class _LIBCPP_TYPE_VIS_ONLY vector
                            ^
driver.cpp:3:9: error: C++ requires a type specifier for all declarations
Driver::execute() {
        ^
driver.cpp:13:9: error: use of undeclared identifier 'processors'
        cin >> processors;
               ^
driver.cpp:14:40: error: use of undeclared identifier 'processors'
        cout << "creating scheduler with " << processors << " processors..." << endl << endl;
                                              ^
driver.cpp:15:24: error: use of undeclared identifier 'processors'
        scheduler = Scheduler(processors);
                              ^
In file included from driver.cpp:1:
./driver.h:33:7: error: implicit default constructor for 'Driver' must explicitly initialize the member 'scheduler' which does not have a default constructor
class Driver {
      ^
./driver.h:38:12: note: member is declared here
        Scheduler scheduler;
                  ^
./scheduler.h:8:7: note: 'Scheduler' declared here
class Scheduler {
      ^
driver.cpp:69:9: note: implicit default constructor for 'Driver' first required here
        Driver driver;
               ^
driver.cpp:70:9: error: call to member function 'execute' is ambiguous
        driver.execute();
        ~~~~~~~^~~~~~~
./driver.h:35:7: note: candidate function
        void execute();
             ^
driver.cpp:3:9: note: candidate function
Driver::execute() {
        ^
1 warning and 12 errors generated.
make: *** [driver.o] Error 1
